# pi-oxide

./: .gitignore  AGENT_RUNTIME_MEMO.md  ASYNC-ACTOR-PLAN.md  CHANGELOG.md  CLAUDE.md  CONTEXT_PROJECTION_SPEC.md  Cargo.toml  EXTENSIBILITY_ROADMAP.md  HANDOFF.md  LICENSE  LOCAL_TOOL_RUNTIME_SPEC.md  MILESTONE_5_CONTEXT_PROJECTION.md  MILESTONE_8_BROWSER_HOST_NATIVE_TOOLS.md  PER_TURN_SYSTEM_PROMPT_PLAN.md  PROJECTION_DESIGN.md  PROJECTION_REVIEW_FIX_PLAN.md  README.md  REFACTOR-HANDOFF.md  REFACTOR-RUNTIME.md  REFACTOR_PLAN.md  ROADMAP.md  SDK_API_DESIGN_ISSUE.md  TOOL_CALL_PREPARATION_PLAN.md  TUI-IMPROVEMENTS.md  design.md  package-lock.json
.github/workflows/: ci.yml  release.yml
.pi/: subagents.json
.pi/tasks/: tasks-019f333c-87b5-751b-9d8e-f039bdbab383.json  tasks-019f3534-a90e-7df3-b01c-63ebc9e287cd.json  tasks-019f3978-430c-72c5-bda4-7e09c8d75353.json  tasks-019f3e3c-f32a-7410-9326-ed01cc4e4220.json
docs/: browser-agent-cleanup-plan.md  lessons-learned-browser-agent.md  releases.md
docs/.archived/: AGENT_RUNTIME_MEMO.md  CHANGELOG.md  MILESTONE_5_CONTEXT_PROJECTION.md  MILESTONE_6_5_LOCAL_TOOL_RUNTIME.md  MILESTONE_7_LOCAL_SESSION_PERSISTENCE.md  PLAN_BROWSER_AGENT.md  PLAN_TERMINAL_AGENT.md  ROADMAP.md
pi-bindings/: Cargo.toml
pi-bindings/src/: c_api.rs  lib.rs
pi-core/: Cargo.toml  README.md
pi-core/src/: agent.rs  agent_runtime.rs  context.rs  context_metadata.rs  context_projection.rs  events.rs  lib.rs  llm.rs  message.rs  script_projection.rs  session.rs  timestamp.rs  tool.rs  types.rs
pi-core/src/agent/: mod.rs  queues.rs  session.rs  streaming.rs  tools.rs  turn.rs
pi-core/tests/: agent_smoke.rs  compaction.rs  context_integration.rs  lifecycle.rs  serde_roundtrip.rs  steering_abort.rs  streaming.rs  tool_preparation.rs  tools_execution.rs
pi-core/tests/common/: mod.rs
pi-host-desktop/: Cargo.toml
pi-host-desktop/src/: app.rs  llm.rs  main.rs  markdown.rs  runner.rs  tools.rs
pi-host-mobile/: Cargo.toml
pi-host-mobile/src/: lib.rs
pi-host-tui/: Cargo.toml  TODO.md
pi-host-tui-e2e/: Cargo.toml
pi-host-tui-e2e/src/: e2e.rs  helpers.rs  lib.rs  record_replay.rs  replay_e2e.rs
pi-host-tui/src/: agent_host.rs  app.rs  commands.rs  config.rs  directives.rs  e2e_tests.rs  editor.rs  extension.rs  host_state.rs  input_tests.rs  llm.rs  llm_cassette.rs  llm_record.rs  llm_replay.rs  main.rs  markdown.rs  model_picker.rs  onboarding.rs  onboarding_test.rs  record_replay_test.rs  replay_e2e.rs  replay_e2e_test.rs  scroll.rs  session.rs  session_log.rs  smoke_test.rs  theme.rs  tools.rs  tools_test.rs
pi-host-tui/src/llm/: async_stream.rs  discovery.rs  messages.rs  mod.rs  request.rs  stream.rs  tests.rs
pi-host-tui/src/tests/: input.rs  llm.rs  mod.rs  onboarding.rs  smoke.rs  tools.rs
pi-host-tui/src/tui/: llm_stream.rs  mod.rs  session_persistence.rs  tool_runner.rs
pi-host-tui/src/tui/ui/: chat.rs  input.rs
pi-host-tui/tests/fixtures/: deepseek_http.cassette.json  explore_project.json  tool_call_session.json
pi-host-web/: .gitignore  Cargo.toml  README.md  biome.json  package-lock.json  package.json  pi_host_web.d.ts  pi_host_web.js  pi_host_web_bg.wasm  pi_host_web_bg.wasm.d.ts  tsconfig.json  vite.config.ts
pi-host-web/pkg/: package.json
pi-host-web/scripts/: build-pkg.js
pi-host-web/sdk/: agent.ts  artifacts.ts  context.ts  errors.ts  events.ts  index.d.ts  index.js  index.ts  init.ts  model.ts  snapshot.ts  stores.ts  tools.ts  types.ts
pi-host-web/sdk/bindings/: host-agent.ts  index.ts  init.ts  markers.ts  tool-preparation.ts  turn-loop.ts  types.ts
pi-host-web/sdk/internal/: engine.ts  events.ts  logger.ts
pi-host-web/sdk/internal/providers/: anthropic.ts  openai.ts  types.ts
pi-host-web/sdk/internal/stores/: indexedDb.ts  persistence.ts
pi-host-web/sdk/internal/tools/: artifact.ts  browser.ts  browserRuntime.ts  liveRuntime.ts  registry.ts  service.ts
pi-host-web/sdk/internal/util/: types.ts
pi-host-web/sdk/orchestration/: agent-engine.ts  config-builders.ts  model-adapter.ts
pi-host-web/sdk/react/: index.ts  useAgent.ts
pi-host-web/src/: artifact_api.rs  directive.rs  dto.rs  handle_table.rs  host_agent_api.rs  host_state.rs  host_state_api.rs  lib.rs  old_api.rs  tests.rs
pi-host-web/test/: README.md  agent.test.ts  anthropic-retry.test.ts  browserTools.test.ts  engine.test.ts  event-mapper.test.ts  events.test.ts  model-adapter.test.ts  model.test.ts  orchestration.test.ts  snapshot.test.ts  steer-e2e.real.test.ts  stores.test.ts  tools.test.ts
pi-host-web/tests/: host_integration.rs
pi-host-web/tests/common/: mod.rs
pi-llm/: Cargo.toml
pi-llm/src/: lib.rs  model.rs  schema.rs  stream.rs
pi-record-server/: Cargo.toml  README.md
pi-record-server/src/: cassette.rs  main.rs  record.rs  replay.rs
web/: .env.example  .gitignore  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  session-smoke.ts  test-types.ts  tsconfig.json  vite.config.ts
web/pkg/: pi_host_web.cjs  pi_host_web.d.ts  pi_host_web.js  pi_host_web_bg.wasm  pi_host_web_bg.wasm.d.ts
web/public/: index.html  pi_host_web_bg.wasm  wasm-loader.js
web/public/pkg/: package.json  pi_host_web.d.ts  pi_host_web.js  pi_host_web_bg.wasm  pi_host_web_bg.wasm.d.ts
web/public/test-sdk/: pi_host_web_bg.wasm  worker.js
web/scripts/: debug-network.ts  fake-server.ts  patch-pkg.js  real-llm-smoke.ts  real-local-coding-smoke.ts  record-multi-turn.ts  replay-multi-turn.ts  test-auto-continue.ts  test-two-turns.ts
web/src/: agentHost.ts  fakeLlm.ts  fakeTools.ts  global.d.ts  main.tsx  rawBinding.ts  wasmBinding.ts
web/src/browser/: app.ts  (+9 more)
web/test/: agent.test.ts  agentHost.test.ts  anthropic.test.ts  asyncToolHost.test.ts  browserHost.test.ts  browserTools.test.ts  codingTools.test.ts  contextProjection.test.ts  driveLoop.test.ts  e2e-browser-agent.spec.ts  localToolRuntime.test.ts  localTools.test.ts  model.test.ts  piTools.test.ts  projectionService.test.ts  sdk-smoke.test.ts  sdk-streaming.test.ts  sdk.test.ts  sessionStore.test.ts  stores.test.ts  toolService.test.ts  tools.test.ts
(+61 files in other folders)
