[workspace]
members = [
    "pi-core",
    "pi-llm",
    "pi-bindings",
    "pi-host-desktop",
    "pi-host-web",
    "pi-host-mobile",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Irving Ou <irving@pi-oxide.dev>"]
license = "MIT"
repository = "https://github.com/pi-oxide/pi-oxide"
readme = "README.md"
exclude = [
    "web/",
    "pkg/",
    "node_modules/",
    "docs/",
    "test-results/",
    "*.wasm",
    ".claude/",
]

[workspace.dependencies]
pi-core = { version = "0.1.0", path = "pi-core" }
pi-llm = { version = "0.1.0", path = "pi-llm" }
pi-bindings = { path = "pi-bindings" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
ts-rs = "12"
