[package]
name = "pi-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Stable C ABI bindings for pi-core. Opaque pointer + JSON wire protocol."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
pi-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
