[package]
name = "pi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure synchronous agent-core state machine. No async, no I/O."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }

[features]
default = []
wasm = []

[dev-dependencies]

[[bin]]
name = "generate-types"
path = "src/bin/generate_types.rs"
