[package]
name = "pi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure synchronous agent-core state machine. No async, no I/O."
keywords = ["agent", "llm", "ai", "state-machine"]
categories = ["development-tools", "data-structures"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rhai = { version = "1.18", default-features = false, features = ["only_i64", "no_float", "no_closure", "no_module"] }

[features]
default = []
wasm = []

[dev-dependencies]
