[package]
name = "pi-host-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop host for pi-core. Tokio async runtime, native shell, terminal UI."

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-core = { workspace = true }

tokio = { version = "1.44", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

ratatui = "0.29"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
futures = "0.3"
pulldown-cmark = "0.12"
syntect = "5.2"
