[package]
name = "pi-host-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Mobile host scaffold for pi-core. Consumes pi-bindings C ABI."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
pi-core = { workspace = true }
pi-bindings = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
