[package]
name = "pi-host-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal TUI host for pi-core. Ratatui interface, native shell, blocking HTTP."

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-core = { workspace = true }

tokio = { version = "1.44", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ratatui = "0.29"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
futures = "0.3"
pulldown-cmark = "0.12"
syntect = "5.2"

[features]
default = []
record = []
replay = []
