[package]
name = "pi-host-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal TUI host for pi-core. Ratatui interface, native shell, blocking HTTP."

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-core = { workspace = true }

tokio = { version = "1.44", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ratatui = "0.29"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
futures = "0.3"
pulldown-cmark = "0.12"
syntect = { version = "5.2", default-features = false, features = ["regex-fancy", "parsing", "default-syntaxes", "default-themes", "html", "plist-load"] }
ignore = "0.4"
globset = "0.4"
regex = "1.11"
toml = "0.8"

[features]
default = []
record = []
replay = []

