[package]
name = "pi-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider protocol definitions. Pure types, no network implementation."
keywords = ["llm", "ai", "provider", "protocol"]
categories = ["development-tools"]

[dependencies]
pi-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
